# clickup-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  deny.yml  publish-aur.yml  release.yml  sync-changelog.yml
docs/: _config.yml  changelog.md  commands.md  index.html  install.md  mcp.md  robots.txt
docs/_layouts/: default.html
docs/superpowers/plans/: 2026-04-22-mcp-tool-filtering.md  2026-06-10-doc-embed-image.md  2026-07-22-mcp-custom-id.md
docs/superpowers/specs/: 2026-03-17-clickup-cli-rust-rewrite-design.md  2026-04-22-mcp-tool-filtering-design.md  2026-06-10-doc-embed-image-design.md  2026-07-22-mcp-custom-id-design.md
npm/: .npmignore  README.md  install.js  package.json
packaging/aur/: .SRCINFO  PKGBUILD  README.md
src/: client.rs  config.rs  error.rs  git.rs  input.rs  lib.rs  markdown.rs  mcp.rs  output.rs
src/commands/: acl.rs  agent_config.rs  attachment.rs  audit_log.rs  auth.rs  chat.rs  checklist.rs  comment.rs  completions.rs  doc.rs  field.rs  folder.rs  goal.rs  group.rs  guest.rs  list.rs  mcp_cmd.rs  member.rs  mod.rs  pagination.rs  role.rs  setup.rs  shared.rs  space.rs  status.rs  tag.rs  task.rs  task_type.rs  template.rs  time.rs  user.rs  view.rs  webhook.rs  workspace.rs
src/mcp/: classify.rs  filter.rs  pagination.rs
tests/: markdown.rs  test_attachment.rs  test_branch_detect.rs  test_cli.rs  test_client.rs  test_comment_markdown.rs  test_config.rs  test_doc_embed.rs  test_file_input.rs  test_mcp_custom_id.rs  test_mcp_fields.rs  test_mcp_filter.rs  test_output.rs  test_output_field_marker.rs  test_shell_args.rs  test_task_estimate.rs  test_task_markdown.rs  test_task_parent.rs
tests/markdown/: blockquotes.rs  code_blocks.rs  edge_cases.rs  headings.rs  lists.rs  mixed.rs  mod.rs  paragraphs.rs
