[package]
name = "clickup-cli"
version = "0.8.1"
edition = "2021"
description = "CLI for the ClickUp API, optimized for AI agents"
license = "Apache-2.0"
repository = "https://github.com/nicholasbester/clickup-cli"
homepage = "https://clickup-cli.com/"
keywords = ["clickup", "cli", "api", "ai-agents", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "clickup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
clap_complete = "4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
