[package]
name = "clickup-cli"
version = "0.14.0"
edition = "2021"
rust-version = "1.88"
description = "CLI for the ClickUp API, optimized for AI agents"
license = "Apache-2.0"
repository = "https://github.com/nicholasbester/clickup-cli"
homepage = "https://clickup-cli.com/"
keywords = ["clickup", "cli", "api", "ai-agents", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"

# Two binary names ship from the same entry point:
#   * `clickup-cli` — canonical name, matches the crate and AUR package.
#   * `clkup`      — short alias for daily ergonomics (5 chars, no hyphen).
# The previous `clickup` binary was dropped in 0.11.0 to clear a name
# collision with the official ClickUp desktop app on Linux.
[[bin]]
name = "clickup-cli"
path = "src/main.rs"

[[bin]]
name = "clkup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
clap_complete = "4"
regex = "1"
# CommonMark parser exposing a typed AST we walk to emit ClickUp doc blocks.
# default-features = false drops the CLI/syntax-highlighting stack (clap, syntect,
# onig, bon, …) — we only need the core parser.
comrak = { version = "0.54", default-features = false }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
